# pit-38

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pl.md  TAX_LAW_AUDIT.md  TEST_GAPS.md  pyproject.toml  requirements.txt
.github/: DISCUSSIONS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broker_support_en.md  broker_support_pl.md  bug_report_en.md  bug_report_pl.md  config.yml  feature_request_en.md  feature_request_pl.md
.github/workflows/: publish.yml  python-app.yml
docs/: BROKERS.md  TAX_RULES.md  TAX_RULES.pl.md
pit38/: cli.py  crypto.py  exchanger.py  output.py  stock.py
pit38/plugins/: README.md  (+1 more)
src/: crypto.py  exchanger.py  main.py  merge_jsons.py  stock.py  utils.py
tests/: README.md  test_asset_value.py  test_binance_csv.py  test_calendar.py  test_crypto.py  test_crypto_loader.py  test_crypto_profit_calculator.py  test_crypto_tax_calculator.py  test_csv_utils.py  test_csv_validator.py  test_currencies.py  test_etrade_fiat_value_parser.py  test_exchange_rate_provider.py  test_exchanger.py  test_fiat_value_parser.py  test_generic_saver_no_bom.py  test_ibi_company_ticker.py  test_ibi_order_parser.py  test_ibi_pdf_reader.py  test_ibi_record_builder.py  test_multi_sources_loader.py  test_normalization.py  test_per_stock_calculator.py  test_profit_calculator.py  test_profit_per_year.py  test_revolut_csv_service.py  test_revolut_row_parser.py  test_revolut_stock_import.py  test_stock.py  test_stock_split_handler.py  test_stock_tax_calculator.py  test_tax.py  test_transaction.py  utils.py
(+165 files in other folders)
