[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pit-38"
version = "2026.4.20.2"
description = "Polish investment tax calculator (PIT-38) for stocks and cryptocurrency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pendulum~=3.2",
    "loguru~=0.7.2",
    "holidays~=0.46",
    "requests~=2.31.0",
    "click~=8.1.3",
    "pandas~=2.2.2",
    "openpyxl~=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.1.1",
    "ipdb==0.13.13",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
pit38 = "pit38.cli:main"
